<resources>
    <string name="app_name">Egar Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="login">Login</string>
    <string name="welcome_again">Welcome again</string>
    <string name="phone">phone</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone">Enter phone</string>
    <string name="password">password</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="create_an_account">Do Not Have an Account ?</string>
    <string name="store_name">Store name</string>
    <string name="text_create_an_account">Create an account</string>
    <string name="store_owner_name">Store owner name</string>
    <string name="commercial_registration_no">Email Address</string>
    <string name="enter_commercial_registration">Enter Email Address</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="add_a_product">Add a product</string>
    <string name="product_name">product name</string>
    <string name="item">item</string>
    <string name="price">price</string>
    <string name="product_description">Product Description</string>
    <string name="product_image">product image</string>
    <string name="quantity">quantity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    //Headings
    <string name="heading_one">Quick &amp; Easy Payments</string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Cashless Payment</string>
    <string name="heading_fourth">Pay Anywhere</string>

    //Description
    <string name="desc_one">Grow your Business By Accepting Card Payments with The New Card Reader</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="title_activity_main_delivery">MainActivityDelivery</string>
    <string name="add_product">Add Product</string>
    <string name="comments">Comments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="logout">LogOut</string>
    <string name="settings">Settings</string>
    <string name="whoarewe">WhoAreWe</string>
    <string name="conditions">Conditions</string>
    <string name="approval">Confirm</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="modify_personal_information">Modify personal information</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone_number">phone number</string>
    <string name="update">Update</string>

</resources>