<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/orders" />


        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_order_details"
            android:title="@string/add_product" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_WhoAreWe"
            android:icon="@drawable/baseline_supervised_user_circle_24"
            android:title="@string/whoarewe" />

        <item
            android:id="@+id/nav_Conditions"
            android:icon="@drawable/baseline_priority_high"
            android:title="@string/conditions" />



    </group>

    
</menu>