<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.egar_admin.ui.homeAdmin.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_order_details"
        android:name="com.example.egar_admin.ui.orderDetails.OrderDetailsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_order_details" />

    <fragment
        android:id="@+id/nav_comments"
        android:name="com.example.egar_admin.ui.comments.CommentsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_comments" />
</navigation>