<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_app"
    tools:context=".views.AddProductActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_170sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bcak" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:background="@drawable/shape_bac" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/add_a_product"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/et_StoreName"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_19sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:inputType="text"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:background="@drawable/shape_bac_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/product_name"
                android:textColor="@color/text_app"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/item"
                android:textColor="@color/text_app"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_StoreName" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_bac_edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/price"
                android:textColor="@color/text_app"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_19sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_bac_edit_text"
                android:inputType="number"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textProductDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/product_description"
                android:textColor="@color/text_app"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_price" />

            <EditText
                android:id="@+id/edit_ProductDescription"
                android:layout_width="0dp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_19sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/shape_bac_edit_text"
                android:inputType="text"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textProductDescription" />


            <TextView
                android:id="@+id/textproductImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/product_image"
                android:textColor="@color/text_app"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_ProductDescription" />

            <EditText
                android:id="@+id/edit_product_image"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_19sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/shape_bac_edit_text"
                android:inputType="text"
                android:drawableLeft="@drawable/icon_add_photo"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textproductImage" />

            <TextView
                android:id="@+id/textQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/quantity"
                android:textColor="@color/text_app"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_product_image" />

            <EditText
                android:id="@+id/editQuantity"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_19sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/shape_bac_edit_text"
                android:inputType="text"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textQuantity" />

            <Button
                android:id="@+id/btn_addProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textSize="@dimen/_24ssp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:backgroundTint="@color/text_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editQuantity"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/back" />


</androidx.constraintlayout.widget.ConstraintLayout>